Added Map and Tile classes
Added emptyTile.png file

--- a/SlnGTM/GTM/GTM/GTM.csproj
+++ b/SlnGTM/GTM/GTM/GTM.csproj
@@ -115,6 +115,8 @@
     <Compile Include="Model\Characters\Inventory.cs" />
     <Compile Include="Model\Characters\Item.cs" />
     <Compile Include="Model\Characters\Statistics.cs" />
+    <Compile Include="Model\Tile.cs" />
+    <Compile Include="Model\Map.cs" />
     <Compile Include="Model\MapLocation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
