Added FlowController class
-Added GetPlayerQueue() method to Team class for easily organize the
turns queue

--- a/SlnGTM/GTM/GTM/GTM.csproj
+++ b/SlnGTM/GTM/GTM/GTM.csproj
@@ -127,6 +127,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Model\Characters\Team.cs" />
+    <Compile Include="Model\GameFlow\FlowController.cs" />
     <Compile Include="Model\Map.cs">
       <SubType>Code</SubType>
     </Compile>
