Finished Hero Selection Screen
-Added HeroLoader class
-Moved LoadHero from Hero to HeroLoader
-Moved Hero Selection Screen call from Program to Game

--- a/SlnGTM/GTM/GTM/GTM.csproj
+++ b/SlnGTM/GTM/GTM/GTM.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Model\Characters\Hero.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Model\Characters\HeroLoader.cs" />
     <Compile Include="Model\Characters\Inventory.cs">
       <SubType>Code</SubType>
     </Compile>
