Changed from HeroLoader to EntityLoader
-Changed the way Heroes/Entities are loaded
-Energy bar textures now stay loaded in EntityLoader
-Added Entity borders

--- a/SlnGTM/GTM/GTM/GTM.csproj
+++ b/SlnGTM/GTM/GTM/GTM.csproj
@@ -133,10 +133,10 @@
     <Compile Include="Model\Characters\Entity.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Model\Characters\EntityLoader.cs" />
     <Compile Include="Model\Characters\Hero.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Model\Characters\HeroLoader.cs" />
     <Compile Include="Model\Characters\Inventory.cs">
       <SubType>Code</SubType>
     </Compile>
