--- a/SlnGTM/GTMEngine/GTMEngine.csproj
+++ b/SlnGTM/GTMEngine/GTMEngine.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Model\MapLocation.cs" />
     <Compile Include="Model\Tile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\HUD.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
