--- a/SlnGTM/GTMEngine/GTMEngine.csproj
+++ b/SlnGTM/GTMEngine/GTMEngine.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\HUD.cs" />
     <Compile Include="UI\HUDDisplay.cs" />
+    <Compile Include="UI\HUDDisplayObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
