--- a/SlnGTM/GTMEngine/GTMEngine.csproj
+++ b/SlnGTM/GTMEngine/GTMEngine.csproj
@@ -96,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\InputController.cs" />
     <Compile Include="Model\Characters\Damage.cs" />
     <Compile Include="Model\Characters\DamageOverTime.cs" />
     <Compile Include="Model\Characters\DamageType.cs" />
@@ -109,7 +110,8 @@
     <Compile Include="Model\Characters\Player.cs" />
     <Compile Include="Model\Characters\Statistics.cs" />
     <Compile Include="Model\Characters\Team.cs" />
-    <Compile Include="Model\GameFlow\FlowController.cs" />
+    <Compile Include="Controller\GameFlow\FlowController.cs" />
+    <Compile Include="Controller\GameFlow\TurnController.cs" />
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\MapLocation.cs" />
     <Compile Include="Model\Tile.cs" />
