--- a/SlnGTM/GTMEngine/GTMEngine.csproj
+++ b/SlnGTM/GTMEngine/GTMEngine.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\MapLocation.cs" />
     <Compile Include="Model\Tile.cs" />
+    <Compile Include="Model\TileVertice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\HUD.cs" />
     <Compile Include="UI\HUDDisplay.cs" />
