Working on the movement animation

--- a/SlnGTM/GTMEngine/GTMEngine.csproj
+++ b/SlnGTM/GTMEngine/GTMEngine.csproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\InputController.cs" />
+    <Compile Include="Model\Characters\Animation.cs" />
     <Compile Include="Model\Characters\Damage.cs" />
     <Compile Include="Model\Characters\DamageOverTime.cs" />
     <Compile Include="Model\Characters\DamageType.cs" />
